--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 /* HERO */
 .hero {
   height: 80vh;
-  background-image: url("images/hero.png");
+  background-image: url("hero.png");
   background-size: cover;
   background-position: center;
   color: white;
