--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* HERO */
 .hero {
-  background-image: url("images/leaves.png");
+  background-image: url("leaves.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
