--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ body {
   border-radius: 5px;
 }
 
+.profile-img {
+  width: 200px;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  object-fit: cover;
+  max-width: 100%;
+}
+
