--- a/style.css
+++ b/style.css
@@ -24,6 +24,17 @@ body {
   gap: 40px;
 }
 
+.about-title {
+  font-family: "Trebuchet MS", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.about-body {
+  font-family: "Trebuchet MS", sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+
 .about img {
   width: 200px;
   border-radius: 5px;
