--- a/style.css
+++ b/style.css
@@ -26,14 +26,15 @@ body {
 
 .about-title {
   font-family: "Trebuchet MS", sans-serif;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bold;
 }
 
 .about-body {
   font-family: "Trebuchet MS", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.6;
+}
 
 .about img {
   width: 200px;
